--- a/docker/core.yaml
+++ b/docker/core.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   vars:
-    docker_distro_release: "{{ ansible_distribution_release if ansible_distribution_release != 'eoan' else 'disco' }}"
+    docker_distribution_release: "{{ 'eoan' if ansible_distribution_release == 'focal' else ansible_distribution_release }}"
     is_mac: "{{ ansible_distribution == 'MacOSX' }}"
 
   tasks:
@@ -26,7 +26,7 @@
     - name: Add Docker APT package repository
       become: yes
       apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ docker_distro_release }} stable
+        repo: deb [arch=amd64] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ docker_distribution_release }} stable
         filename: docker
         update_cache: no
       register: apt_repository
