--- a/dotnet/core.yaml
+++ b/dotnet/core.yaml
@@ -7,8 +7,10 @@
       - "2.1"
       - "3.0"
       - "3.1"
-    dotnet_distro_version: "{{ ansible_distribution_major_version if ansible_distribution == 'Debian' else ansible_distribution_version }}"    # MSFT uses '19.04' for Ubuntu, and just '10' for Debian
+    dotnet_distribution_release: "{{ 'eoan' if ansible_distribution_release == 'focal' else ansible_distribution_release }}"
+    dotnet_distribution_version: "{{ ansible_distribution_major_version if ansible_distribution == 'Debian' else ('19.10' if ansible_distribution_version == '20.04' else ansible_distribution_version) }}"    # MSFT uses '19.04' for Ubuntu, and just '10' for Debian
     is_mac: "{{ ansible_distribution == 'MacOSX' }}"
+    is_ubuntu_focal: "{{ ansible_distribution_release == 'focal' }}"
 
   tasks:
     # Linux
@@ -17,16 +19,16 @@
       become: yes
       apt_key:
         url: https://packages.microsoft.com/keys/microsoft.asc
-      when: not is_mac
+      when: not is_mac and not is_ubuntu_focal
 
     - name: Add Microsoft APT package repository
       become: yes
       apt_repository:
-        repo: deb [arch=amd64] https://packages.microsoft.com/{{ ansible_distribution | lower }}/{{ dotnet_distro_version }}/prod {{ ansible_distribution_release }} main
+        repo: deb [arch=amd64] https://packages.microsoft.com/{{ ansible_distribution | lower }}/{{ dotnet_distribution_version }}/prod {{ dotnet_distribution_release }} main
         filename: microsoft-prod
         update_cache: no
       register: apt_repository
-      when: not is_mac
+      when: not is_mac and not is_ubuntu_focal
 
     - name: Update APT package list
       become: yes
@@ -43,7 +45,7 @@
         package: dotnet-sdk-{{ item }}
       register: dotnet_sdk_installed_linux
       loop: "{{ dotnet_versions }}"
-      when: not is_mac
+      when: not is_mac and not is_ubuntu_focal
 
     # macOS
 
