--- a/git/vscode.yaml
+++ b/git/vscode.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   tasks:
-    - name: Install VS Code Extention
+    - name: Install VS Code Extension
       command: code --install-extension {{ item }}
       args:
         creates: ~/.vscode/extensions/{{ item }}-*/package.json
