--- a/python/vscode.yaml
+++ b/python/vscode.yaml
@@ -3,7 +3,7 @@
   connection: local
 
   tasks:
-    - name: Install VS Code Extention
       command: code --install-extension ms-python.python
+    - name: Install VS Code Extension
       args:
         creates: ~/.vscode/extensions/ms-python.python-*/package.json
