feat(git): add vscode notifications

--- a/git/vscode.yaml
+++ b/git/vscode.yaml
@@ -11,3 +11,4 @@
         - bierner.github-markdown-preview
         - eamodio.gitlens
         - github.vscode-pull-request-github
+        - fabiospampinato.vscode-github-notifications-bell
