--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,219 +1,185 @@
 {
-  // Debugging
-  "debug.internalConsoleOptions": "openOnSessionStart",
-  "debug.toolBarLocation": "docked",
+    // Text Editor
+    "editor.accessibilitySupport": "off",
+    "editor.cursorBlinking": "expand",
+    "editor.fontFamily": "Source Code Pro",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 15,
+    "editor.formatOnPaste": true,
+    "editor.formatOnType": true,
+    "editor.matchBrackets": "never",
+    "editor.minimap.enabled": false,
+    "editor.multiCursorModifier": "alt",
+    "editor.parameterHints.cycle": true,
+    "editor.renderControlCharacters": true,
+    "editor.renderWhitespace": "boundary",
+    "editor.rulers": [ 120 ],
+    "editor.showFoldingControls": "always",
+    "editor.smoothScrolling": true,
+    "editor.tabCompletion": "on",
+    "editor.tabSize": 2,
+    "editor.wordWrapColumn": 120,
 
-  // Text editor
-  "breadcrumbs.enabled": true,
-  "editor.autoClosingBrackets": "never",
-  "editor.find.autoFindInSelection": "never",
-  "editor.fontFamily": "UbuntuMono Nerd Font Mono",
-  "editor.fontSize": 16,
-  "editor.formatOnPaste": true,
-  "editor.minimap.enabled": false,
-  "editor.parameterHints.enabled": false,
-  "editor.renderWhitespace": "boundary",
-  "editor.showFoldingControls": "always",
-  "editor.suggestSelection": "first",
-  "files.autoSave": "onWindowChange",
-  "files.defaultLanguage": "markdown",
-  "files.trimTrailingWhitespace": true,
-
-  // Explorer
-  "explorer.confirmDelete": false,
-  "explorer.confirmDragAndDrop": false,
-  "explorer.openEditors.visible": 0,
-
-  // Git
-  "git.inputValidation": "off",
-
-  // TypeScript
-  "typescript.updateImportsOnFileMove.enabled": "always",
-
-  // Themes/colors/fonts/workbench/etc.
-  "extensions.ignoreRecommendations": true,
-  "material-icon-theme.activeIconPack": "none",
-  "material-icon-theme.folders.color": "#ff7043",
-  "search.useGlobalIgnoreFiles": true,
-  "terminal.integrated.fontFamily": "UbuntuMono Nerd Font Mono",
-  "terminal.integrated.fontSize": 16,
-  "terminal.integrated.fontWeightBold": "500",
-  "terminal.integrated.rendererType": "canvas",
-  "window.restoreFullscreen": true,
-  "window.restoreWindows": "none",
-  "window.titleBarStyle": "native",
-  "window.zoomLevel": 0,
-  "workbench.colorCustomizations": {
-    ///// Dark colors
-    // "terminal.ansiBlack": "#2e3436",
-    // "terminal.ansiBlue": "#3465a4",
-    // "terminal.ansiBrightBlack": "#555753",
-    // "terminal.ansiBrightBlue": "#729fcf",
-    // "terminal.ansiBrightCyan": "#34e2e2",
-    // "terminal.ansiBrightGreen": "#8ae234",
-    // "terminal.ansiBrightMagenta": "#ad7fa8",
-    // "terminal.ansiBrightRed": "#f49797",
-    // "terminal.ansiBrightWhite": "#fbfbfb",
-    // "terminal.ansiBrightYellow": "#fce94f",
-    // "terminal.ansiCyan": "#06989a",
-    // "terminal.ansiGreen": "#4e9a06",
-    // "terminal.ansiMagenta": "#75507b",
-    // "terminal.ansiRed": "#ae5e5e",
-    // "terminal.ansiWhite": "#b5bbae",
-    // "terminal.ansiYellow": "#c4a000",
-    // "terminal.background": "#2e3436",
-    // "terminal.foreground": "#b5bbae",
-
-    ///// Light colors
-    "terminal.ansiBlack": "#eeeeee",
-    "terminal.ansiBlue": "#729fcf",
-    "terminal.ansiBrightBlack": "#b5bbae",
-    "terminal.ansiBrightBlue": "#3265a4",
-    "terminal.ansiBrightCyan": "#06989a",
-    "terminal.ansiBrightGreen": "#4e9a06",
-    "terminal.ansiBrightMagenta": "#75507b",
-    "terminal.ansiBrightRed": "#ae5e5e",
-    "terminal.ansiBrightWhite": "#2e3436",
-    "terminal.ansiBrightYellow": "#9b7f00",
-    "terminal.ansiCyan": "#2ec3c3",
-    "terminal.ansiGreen": "#79c32e",
-    "terminal.ansiMagenta": "#ad7fa8",
-    "terminal.ansiRed": "#f49797",
-    "terminal.ansiWhite": "#696b67",
-    "terminal.ansiYellow": "#c4a000",
-    "terminal.background": "#eeeeee",
-    "terminal.foreground": "#696b67",
-
-    "terminal.selectionBackground": "#3465a440",
-    "[GitHub Plus]": {
-      "editor.background": "#eeeeee",
-      "editor.foreground": "#2e3436",
-      "gitDecoration.ignoredResourceForeground": "#d0d0d0",
-      "panel.background": "#eeeeee3d",
-      "statusBar.background": "#3465a4",
-      "statusBar.border": "#3465a4",
-      "statusBar.foreground": "#eeeeee"
-    }
-  },
-  "workbench.colorTheme": "GitHub Plus",
-  "workbench.editor.closeEmptyGroups": false,
-  "workbench.editor.enablePreview": false,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.settings.editor": "json",
-  "workbench.sideBar.location": "left",
-  "workbench.startupEditor": "none",
-  "workbench.tips.enabled": false,
-
-  // extension: Live Share
-  "liveshare.featureSet": "insiders",
-
-  // extension: Toggle Excluded Files
-  "toggleexcludedfiles.statusBar.enabled": true,
-
-  // extension: VS Intellicode
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-
-  // extension: C#
-  "csharp.suppressDotnetRestoreNotification": true,
-  "csharp.unitTestDebuggingOptions": {
-    "justMyCode": false
-  },
-  "omnisharp.enableEditorConfigSupport": true,
-  "omnisharp.enableRoslynAnalyzers": true,
-
-  // extension: PowerShell
-  "powershell.integratedConsole.showOnStartup": false,
-
-  // extension: Code Spell Checker
-  "cSpell.enabledLanguageIds": [
-    "asciidoc",
-    "c",
-    "cpp",
-    "csharp",
-    "css",
-    "go",
-    "handlebars",
-    "html",
-    "jade",
-    "javascript",
-    "javascriptreact",
-    "latex",
-    "less",
-    "markdown",
-    "php",
-    "plaintext",
-    "pub",
-    "python",
-    "restructuredtext",
-    "rust",
-    "scss",
-    "text",
-    "typescript",
-    "typescriptreact",
-    "yml"
-  ],
-  "cSpell.userWords": [
-    "appcenter",
-    "fluentd",
-    "kubernetes",
-    "recurse",
-    "telegraf",
-    "testdouble",
-    "vanaheim",
-    "xunit"
-  ],
-  "peacock.favoriteColors": [
-    {
-      "name": "Angular Red",
-      "value": "#b52e31"
+    "[html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "name": "Auth0 Orange",
-      "value": "#eb5424"
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "name": "Azure Blue",
-      "value": "#007fff"
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "name": "C# Purple",
-      "value": "#68217A"
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "name": "Gatsby Purple",
-      "value": "#639"
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    {
-      "name": "Go Cyan",
-      "value": "#5dc9e2"
+
+    "files.autoSave": "onWindowChange",
+    "files.defaultLanguage": "markdown",
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+
+    "window.zoomLevel": 0,
+
+    // Explorer
+    "explorer.confirmDelete": false,
+    "explorer.openEditors.visible": 0,
+
+    "extensions.autoUpdate": true,
+    "extensions.ignoreRecommendations": false,
+
+    // Workbench
+    "workbench.iconTheme": "eq-material-theme-icons",
+    "debug.onTaskErrors": "showErrors",
+
+    // Terminal
+    "terminal.integrated.shell.windows": "cmd.exe",
+    "terminal.integrated.shellArgs.windows": [ "/K", "C:\\dev\\cmder\\vendor\\init.bat" ],
+    "terminal.integrated.copyOnSelection": true,
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.inheritEnv": false,
+
+    "workbench.colorTheme": "Ariake Dark",
+    "workbench.colorCustomizations": {
+        "statusBar.background": "#2A2D37",
+        "statusBar.noFolderBackground": "#2A2D37",
+        "statusBar.debuggingBackground": "#2A2D37"
     },
-    {
-      "name": "Java Blue-Gray",
-      "value": "#557c9b"
+    "workbench.sideBar.location": "right",
+    "workbench.startupEditor": "newUntitledFile",
+
+    // c#
+    "csharp.suppressDotnetRestoreNotification": true,
+    "csharp.unitTestDebuggingOptions": {
+      "justMyCode": true
     },
-    {
-      "name": "JavaScript Yellow",
-      "value": "#f9e64f"
+
+    "dotnet-test-explorer.autoExpandTree": true,
+    "dotnet-test-explorer.autoWatch": true,
+    "dotnet-test-explorer.enableTelemetry": false,
+
+    "omnisharp.enableEditorConfigSupport": true,
+    "omnisharp.enableRoslynAnalyzers": true,
+    "omnisharp.path": "latest",
+    "omnisharp.useGlobalMono": "auto",
+
+    // js
+    "javascript.updateImportsOnFileMove.enabled": "always",
+
+    // python
+    "python.linting.enabled": true,
+    "python.linting.lintOnSave": true,
+    "python.linting.pycodestyleEnabled": false,
+    "python.linting.pylintEnabled": true,
+    "python.formatting.provider": "yapf",
+    "python.formatting.yapfPath": "yapf",
+    "python.formatting.yapfArgs": [
+        "--style",
+        "${workspaceRoot}/setup.cfg"
+    ],
+
+    // terraform
+    "terraform.indexing": {
+        "enabled": false,
+        "liveIndexing": false,
+        "delay": 500,
+        "exclude": [
+            ".terraform/**/*",
+            "**/.terraform/**/*"
+        ]
     },
-    {
-      "name": "Mandalorian Blue",
-      "value": "#1857a4"
+    "terraform.languageServer": {
+        "enabled": true,
+        "args": []
     },
-    {
-      "name": "Node Green",
-      "value": "#215732"
-    },
-    {
-      "name": "React Blue",
-      "value": "#00b3e6"
-    },
-    {
-      "name": "Something Different",
-      "value": "#832561"
-    },
-    {
-      "name": "Vue Green",
-      "value": "#42b883"
-    }
-  ]
+
+    // Git extensions
+    "git.autofetch": true,
+    // @sync os=windows
+    // "gitProjectManager.baseProjectsFolders": [
+    // "c:\\dev"
+    // ],
+    // @sync os=mac
+    "gitProjectManager.baseProjectsFolders": [ "~/dev" ],
+
+    "githubPullRequests.defaultMergeMethod": "rebase",
+
+    "githubNotificationsBell.refreshInterval": 60,
+    "githubNotificationsBell.color": "#f012be",
+    "githubNotificationsBell.hideIfNone": false,
+    "githubNotificationsBell.showNumberOfNotifications": true,
+    "githubNotificationsBell.icon": "comment-discussion",
+
+    // live share
+    "liveshare.audio.joinCallBehavior": "accept",
+    "liveshare.featureSet": "insiders",
+    "liveshare.showInStatusBar": "whileCollaborating",
+
+    // setting sync
+    "sync.autoDownload": true,
+    "sync.autoUpload": true,
+    "sync.forceDownload": false,
+    "sync.forceUpload": true,
+    "sync.gist": "299b1e3d511aa3a12ae069f5af4fe539",
+    "sync.quietSync": false,
+    "sync.removeExtensions": true,
+    "sync.syncExtensions": true,
+
+     // spell check
+    "cSpell.enableFiletypes": [
+      "asciidoc",
+      "c",
+      "cpp",
+      "csharp",
+      "css",
+      "go",
+      "handlebars",
+      "html",
+      "jade",
+      "javascript",
+      "javascriptreact",
+      "latex",
+      "less",
+      "markdown",
+      "php",
+      "plaintext",
+      "pub",
+      "python",
+      "restructuredtext",
+      "rust",
+      "scss",
+      "text",
+      "typescript",
+      "typescriptreact",
+      "yml"
+    ],
+
+    "vsicons.dontShowNewVersionMessage": true,
+    "stylint.alwaysShowStatus": true,
+    "zenMode.hideStatusBar": false
 }
