chore: update dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,32 +8,34 @@
       "*.yaml": "ansible"
     },
     "cSpell.words": [
+      "agrc",
       "ansible",
       "arcgis",
+      "ariake",
+      "autofetch",
       "azuretools",
+      "bierner",
+      "cmder",
+      "conda",
+      "dbaeumer",
+      "eamodio",
+      "envs",
       "esbenp",
+      "fabiospampinato",
+      "gitlens",
       "globaltool",
+      "hammerspoon",
+      "kohler",
       "liveshare",
       "nuget",
       "omnisharp",
-      "reportgenerator",
-      "yapf",
-      "pylint",
-      "envs",
-      "conda",
-      "agrc",
-      "autofetch",
-      "vsicons",
-      "stylint",
-      "gitlens",
+      "pianobar",
       "pycodestyle",
-      "bierner",
-      "eamodio",
-      "fabiospampinato",
+      "pylint",
+      "reportgenerator",
+      "stylint",
       "vmsynkov",
-      "dbaeumer",
-      "kohler",
-      "cmder",
-      "ariake"
+      "vsicons",
+      "yapf"
     ]
 }
