--- a/git/customization.yaml
+++ b/git/customization.yaml
@@ -3,101 +3,7 @@
   connection: local
 
   tasks:
-    - name: Download bash-git-prompt
-      git:
-        repo: https://github.com/magicmonty/bash-git-prompt
-        dest: ~/.bash-git-prompt
-
-    - name: Enable bash-git-prompt
-      blockinfile:
-        path: ~/.bashrc
-        marker: "### {mark} Ansible managed: Enable bash-git-prompt"
-        block: |
-          GIT_PROMPT_THEME=Default
-          GIT_PROMPT_FETCH_REMOTE_STATUS=0
-
-          source ~/.bash-git-prompt/gitprompt.sh
-          source ~/.bash-git-prompt/prompt-colors.sh
-
-    - name: Add bash-git-prompt customization
-      blockinfile:
-        path: ~/.bashrc
-        marker: "### {mark} Ansible managed: bash-git-prompt customization"
-        block: |
-          function echoKubeContext() {
-            if which kubectl > /dev/null; then
-              CURRENT_CONTEXT=$(kubectl config current-context 2>/dev/null)
-              if [[ $CURRENT_CONTEXT != "" ]]; then
-                echo -ne " \033[38;5;112;48;5;242m  \033[38;5;254m$CURRENT_CONTEXT \033[0m"
-              fi
-            fi
-          }
-
-          function echoAksAccount() {
-            if [ -f ~/.azure/clouds.config ]; then
-              if which gsed > /dev/null; then
-                CURRENT_SUB=$(gsed -nr "/^\[AzureCloud\]/ { :l /^subscription[ ]*=/ { s/.*=[ ]*//; p; q;}; n; b l;}" ~/.azure/clouds.config)
-              else
-                CURRENT_SUB=$(sed -nr "/^\[AzureCloud\]/ { :l /^subscription[ ]*=/ { s/.*=[ ]*//; p; q;}; n; b l;}" ~/.azure/clouds.config)
-              fi
-              if [[ $CURRENT_SUB != "" ]]; then
-                CURRENT_ACCOUNT=$(cat ~/.azure/azureProfile.json | jq -r ".subscriptions[] | select(.id==\"$CURRENT_SUB\") | .name")
-                if [[ $CURRENT_ACCOUNT != "" ]]; then
-                  echo -ne " \033[38;5;227;48;5;30m  \033[38;5;254m$CURRENT_ACCOUNT \033[0m"
-                fi
-              fi
-            fi
-          }
-
-          function echoRubyVersion() {
-            if which rbenv > /dev/null; then
-              CURRENT_RUBY=$(rbenv version-name)
-              echo -ne " \033[38;5;210;48;5;52m  \033[38;5;254m$CURRENT_RUBY \033[0m"
-            fi
-          }
-
-          function echoGoVersion() {
-            if which go > /dev/null; then
-              CURRENT_GO=$(go version | awk '{print $3; exit;}')
-              echo -ne " \033[38;5;16;48;5;80m  $CURRENT_GO \033[0m"
-            fi
-          }
-
-          function echoPath() {
-            echo -ne " \033[38;5;227;48;5;28m  \033[38;5;254m$(dirs +0) \033[0m"
-          }
-
-          function echoColor() {
-            echo -ne "\033[48;5;$1;38;5;$2m"
-          }
-
-          # Configuration
-          GIT_PROMPT_SHOW_UNTRACKED_FILES="all"
-          GIT_PROMPT_IGNORE_STASH="1"
-
-          # Pre- and post-status prompt strings
-          GIT_PROMPT_COMMAND_FAIL="${ResetColor} \`echoColor 131 227\` ✘ _LAST_COMMAND_STATE_ ${ResetColor}"
-          GIT_PROMPT_COMMAND_OK=""
-          GIT_PROMPT_START_USER="${ResetColor}_LAST_COMMAND_INDICATOR_\`echoRubyVersion\`\`echoGoVersion\`\`echoKubeContext\`\`echoAksAccount\`"
-          GIT_PROMPT_START_ROOT="${GIT_PROMPT_START_USER}"
-          GIT_PROMPT_END_USER="${ResetColor}\`echoPath\` \n${BoldGreen} sh$ ${ResetColor}"
-          GIT_PROMPT_END_ROOT="${ResetColor}\`echoPath\` \n${BoldRed} sh# ${ResetColor}"
-
-          # Individual overrides
-          GIT_PROMPT_BRANCH="\`echoColor 25 110\`\`echoColor 25 254\` "
-          GIT_PROMPT_CHANGED="\`echoColor 25 227\` ~"
-          GIT_PROMPT_CLEAN=""
-          GIT_PROMPT_CONFLICTS="\`echoColor 25 210\`  "
-          GIT_PROMPT_PREFIX="\`echoColor 25 254\` "
-          GIT_PROMPT_REMOTE=""
-          GIT_PROMPT_SEPARATOR=""
-          GIT_PROMPT_STAGED="\`echoColor 25 113\` ±"
-          GIT_PROMPT_STASHED="\`echoColor 25 110\`  "
-          GIT_PROMPT_SUFFIX="\`echoColor 25 254\` "
-          GIT_PROMPT_UNTRACKED="\`echoColor 25 227\` +"
-
-          # Symbols
-          GIT_PROMPT_SYMBOLS_AHEAD="\`echoColor 25 110\` "
-          GIT_PROMPT_SYMBOLS_BEHIND="\`echoColor 25 110\` "
-          GIT_PROMPT_SYMBOLS_NO_REMOTE_TRACKING="\`echoColor 25 227\` "
-          GIT_PROMPT_SYMBOLS_PREHASH=":"
+    - name: Set global configuration
+      copy:
+        src: gitconfig
+        dest: ~/.gitconfig
