refactor(git): use config as name where possible

--- a/git/customization.yaml
+++ b/git/customization.yaml
@@ -5,5 +5,5 @@
   tasks:
     - name: Set global configuration
       copy:
-        src: gitconfig
+        src: config
         dest: ~/.gitconfig
