--- a/virtualization/core.yaml
+++ b/virtualization/core.yaml
@@ -2,38 +2,7 @@
   hosts: 127.0.0.1
   connection: local
 
-  vars:
-    is_mac: "{{ ansible_distribution == 'MacOSX' }}"
-
   tasks:
-    - set_fact: is_wsl={{ not is_mac and lookup('file', '/proc/version') is regex('(M|m)icrosoft') }}
-
-    # Linux
-
-    - name: Install QEMU/KVM (Linux)
-      become: yes
-      apt:
-        package: "{{ item }}"
-      loop:
-        - bridge-utils
-        - libvirt-clients
-        - libvirt-daemon-system
-        - ovmf
-        - qemu-kvm
-        - virt-manager
-      when: not is_mac and not is_wsl
-
-    - name: Enable QEMU/KVM for current user
-      become: yes
-      user:
-        name={{ lookup('env', "USER") }}
-        groups=libvirt
-        append=yes
-      when: not is_mac and not is_wsl
-
-    # macOS
-
-    - name: Install VirtualBox (macOS)
+    - name: Install Parallels (macOS)
       homebrew_cask:
-        name: virtualbox
-      when: is_mac
+        name: parallels
