feat(git): add env variables

--- a/git/customization.yaml
+++ b/git/customization.yaml
@@ -7,3 +7,9 @@
       copy:
         src: config
         dest: ~/.gitconfig
+    - name: Ensure environment variables
+      blockinfile:
+        path: ~/.bashrc
+        marker: "### {mark} Ansible managed: git customization"
+        block: |
+          export GIT_EDITOR=vim
