fix: all and no customization with new playbooks

--- a/_all.yaml
+++ b/_all.yaml
@@ -20,3 +20,8 @@
 - import_playbook: kubectl/customization.yaml
 - import_playbook: nodejs/customization.yaml
 - import_playbook: ruby/customization.yaml
+- import_playbook: hammerspoon/customization.yaml
+- import_playbook: irc/customization.yaml
+- import_playbook: pianobar/customization.yaml
+- import_playbook: terraform/customization.yaml
+- import_playbook: vim/customization.yaml
