chore: update dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,8 @@
       "hammerspoon",
       "irssi",
       "kohler",
+      "kubectl",
+      "kubernetes",
       "liveshare",
       "nuget",
       "omnisharp",
