feat(shell): setup oh my zsh

--- a/_all_no_customization.yaml
+++ b/_all_no_customization.yaml
@@ -14,6 +14,7 @@
 - import_playbook: core.yaml
 - import_playbook: dev-folders/core.yaml
 - import_playbook: fonts/core.yaml
+- import_playbook: omz/core.yaml
 
 ##### Developer tools
 
