fix(dotnet): dir and shell command syntax

--- a/dotnet/core.yaml
+++ b/dotnet/core.yaml
@@ -15,10 +15,11 @@
         mode: 0755
 
     - name: Install .NET SDK (macOS)
-      shell: dotnet-install -c {{ item }}
+      shell: ./dotnet-install -c {{ item }}
       register: dotnet_sdk_installed_mac
       loop: "{{ dotnet_versions }}"
       args:
+        chdir: ~/bin
         creates: ~/.dotnet/sdk/{{ item }}.*/.version
 
     - name: Create shortcut to dotnet
