fix(alfred): use alfred 4, 3 is broken

--- a/alfred/core.yaml
+++ b/alfred/core.yaml
@@ -3,6 +3,6 @@
   connection: local
 
   tasks:
-    - name: Install Alfred 3 (macOS)
+    - name: Install Alfred (macOS)
       homebrew_cask:
-        name: alfred3
+        name: alfred
