--- a/_all.yaml
+++ b/_all.yaml
@@ -11,14 +11,13 @@
 
 - import_playbook: _all_no_customization.yaml
 
-- import_playbook: customization-text.yaml
+# - import_playbook: customization-text.yaml
 - import_playbook: customization-ui.yaml
 - import_playbook: vscode/customization.yaml
 - import_playbook: docker/customization.yaml
 - import_playbook: dotnet/customization.yaml
 - import_playbook: git/customization.yaml
 - import_playbook: kubectl/customization.yaml
-- import_playbook: nodejs/customization.yaml
 - import_playbook: hammerspoon/customization.yaml
 - import_playbook: irc/customization.yaml
 - import_playbook: pianobar/customization.yaml
