fix(omz): fix sourcing issue

--- a/omz/core.yaml
+++ b/omz/core.yaml
@@ -31,7 +31,9 @@
           antigen bundle zsh-users/zsh-autosuggestions
           antigen bundle lukechilds/zsh-nvm
 
-          antigen theme https://github.com/caiogondim/bullet-train-oh-my-zsh-theme bullet-train
+          # antigen theme https://github.com/caiogondim/bullet-train-oh-my-zsh-theme bullet-train
+          THEME=caiogondim/bullet-train-oh-my-zsh-theme
+          antigen list | grep $THEME; if [ $? -ne 0 ]; then antigen theme $THEME; fi
 
           if [[ "$OSTYPE" == "darwin"* ]]; then
               antigen bundle osx
