fix(git): use keychain

--- a/git/config
+++ b/git/config
@@ -4,6 +4,8 @@
 [core]
     editor = /usr/local/bin/vim
     autocrlf = input
+[credential]
+    helper = osxkeychain
 [push]
     default = simple
 [fetch]
